<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.segura.imagesapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.segura.imagesapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.segura.imagesapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.segura.imagesapp.ui.profile.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/profile_fragment" >
        <argument
            android:name="userName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/photoDetailFragment"
        android:name="com.segura.imagesapp.ui.detail.PhotoDetailFragment"
        android:label="PhotoDetailFragment" >
        <argument
            android:name="imageId"
            app:argType="string" />
        <argument
            android:name="profileId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.segura.imagesapp.ui.search.SearchFragment"
        android:label="SearchFragment" >
        <action
            android:id="@+id/action_searchFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
        <action
            android:id="@+id/action_searchFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
</navigation>